Remove deprecations (#141)